<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="FB_Operate" Id="{8ee47251-2ac9-09b7-2785-97e47b267431}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Operate
VAR_INPUT
	i_nOperation : E_Op := E_Op.NONE; // Select which operation to run, if any
	i_bCancel : BOOL; // Flag to cancel the current operation
END_VAR
VAR_OUTPUT
	q_bBusy : BOOL := FALSE; // Flag for if an operation is running
	q_nOperation : E_Op := E_Op.NONE; // Operation that is currently running
END_VAR
VAR
	(* Operations *)
	fbPumpTransportTube : FB_PumpTransportTube;
	fbVentTransportTube : FB_VentTransportTube;
	fbPumpSwitchbox : FB_PumpSwitchbox;
	fbSlowPumpSwitchbox : FB_SlowPumpSwitchbox;
	fbVentPumpStation : FB_VentPumpStation;
	fbVentSwitchbox : FB_VentSwitchbox;
	fbSlowVentSwitchbox : FB_SlowVentSwitchbox;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Run operations, but don't start any new operations if another operation is still running *)

// If there isn't a currently running operation, then the input operation will become the new running operation
// Also, don't switch the operation as long as another operation is still busy!
IF NOT q_bBusy THEN
	q_nOperation := i_nOperation;
END_IF

// Start execution of selected operation. Other operations will idle
fbPumpTransportTube(
	i_bExecute := q_nOperation = E_Op.POT1, 
	i_bCancel := i_bCancel,
	i_eTransportTube := E_TransportTube.BI1
);
q_bBusy := q_bBusy OR fbPumpTransportTube.q_bBusy;

fbVentTransportTube(
	i_bExecute := q_nOperation = E_Op.VOT1,
	i_bCancel := i_bCancel,
	i_eTransportTube := E_TransportTube.BI1
);
q_bBusy := q_bBusy OR fbVentTransportTube.q_bBusy;

fbPumpSwitchbox(i_bExecute := q_nOperation = E_Op.PSB,
	i_bCancel := i_bCancel);
q_bBusy := q_bBusy OR fbPumpSwitchbox.q_bBusy;

fbSlowPumpSwitchbox(i_bExecute := q_nOperation = E_Op.SPSB,
	i_bCancel := i_bCancel);
q_bBusy := q_bBusy OR fbSlowPumpSwitchbox.q_bBusy;	
	
fbVentPumpStation(i_bExecute := q_nOperation = E_Op.VPS,
	i_bCancel := i_bCancel);
q_bBusy := q_bBusy OR fbVentPumpStation.q_bBusy;	
	
fbVentSwitchbox(i_bExecute := q_nOperation = E_Op.VSB,
	i_bCancel := i_bCancel);
q_bBusy := q_bBusy OR fbVentSwitchbox.q_bBusy;

fbVentSwitchbox(i_bExecute := q_nOperation = E_Op.SVSB,
	i_bCancel := i_bCancel);
q_bBusy := q_bBusy OR fbSlowVentSwitchbox.q_bBusy;

// If there isn't an operation running, then set opertion to none
IF NOT q_bBusy THEN
	q_nOperation := E_Op.NONE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_Operate">
      <LineId Id="108" Count="2" />
      <LineId Id="168" Count="0" />
      <LineId Id="111" Count="5" />
      <LineId Id="143" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="144" Count="1" />
      <LineId Id="162" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="172" Count="3" />
      <LineId Id="201" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="163" Count="1" />
      <LineId Id="119" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="165" Count="1" />
      <LineId Id="120" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="179" Count="2" />
      <LineId Id="178" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="124" Count="2" />
      <LineId Id="75" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>